--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Special+Elite" rel="stylesheet">
     <link rel="stylesheet" href="../src/app.css"/>
     <title>React App</title>
   </head>
